# x-disturb-backend

./: .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  backend_blueprint.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/routers/: auth_routes.py  health_routes.py  payment_routes.py
app/core/: base_exception.py  chapa.py  dependency.py  exception_handler.py  firebase.py  sms.py
app/core/common/: __init__.py  serializers.py
app/core/security/: auth_exceptions.py  jwt.py  password.py
app/modules/auth/exceptions/: exceptions.py
app/modules/auth/repositories/: otp_repository.py
app/modules/auth/schemas/: schemas.py
app/modules/auth/services/: auth_services.py
app/modules/example/exceptions/: exceptions.py
app/modules/example/repositories/: example_repository.py
app/modules/example/schemas/: schemas.py
app/modules/example/services/: example_services.py
app/modules/payment/: __init__.py
app/modules/payment/exceptions/: exceptions.py
app/modules/payment/repositories/: payment_repository.py
app/modules/payment/schemas/: schemas.py
app/modules/payment/services/: payment_services.py
app/tests/: conftest.py
nginx/: x-disturb.conf
